--- a/src/components/index.css
+++ b/src/components/index.css
@@ -1,5 +1,6 @@
 body, html {
   background-image: none;
+  background-color: #888888;
 }
 
 .search-style {
@@ -32,7 +33,7 @@ body, html {
 
 .right-nav {
   position: absolute;
-  left: 70%;
+  right: 0;
   top: 15%;
   /* justify-content: end; */
 }
@@ -60,3 +61,16 @@ body, html {
 /* .option {
   margin: auto 25px;
 } */
+
+.input-post-style {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(77, 77, 77, 0.5);
+  position: fixed;
+  z-index: 100;
+  
+}
+
+p {
+  margin: 0;
+}
