search friend feature

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -5,11 +5,10 @@ body, html {
 
 .search-style {
   background-color: #b3cccc;
-  height: auto;
+  height: fit-content;
   display: flex;
-  position: relative;
-  margin: auto 0;
-  padding: 5px;
+  flex-direction: column;
+  margin-top: 16px;
   border-radius: 5px;
 }
 
@@ -73,4 +72,5 @@ body, html {
 
 p {
   margin: 0;
+  line-height: normal;
 }
